- Use KNetworkManager icons + Bonus: use monochromatic icons if available
- Add spanish translation.
- Add chinese simplified translation.
- Add KNotification support.
- Add About dialog.

v0.1.1
------------------------------------------------
- Add italian translation.
- Change window title.
- Prevent multiple instances.
- Save/restore window size on close.

v0.1
------------------------------------------------
- Initial release. 